# itt-utility

./: .prettierrc  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: main.py  requirements.txt
src-tauri/resources/: requirements.txt
src-tauri/src/: lib.rs  main.rs
src/components/button/: Button.tsx
src/components/input/: input.tsx
