[package]
name = "itt-utility"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "itt_utility_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.3.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-dialog = "2"
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
tauri-plugin-store = "2.2.1"
tokio = { version = "1.45.1", features = ["full"] }
serde = "1.0.219"
futures = "0.3.31"
